--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+data/*
 llama-3.2-3b-it-Ecommerce-ChatBot/*
 models/llama-3.2-3b-it-Ecommerce-ChatBot/*
 models/wandb/*
