--- a/behaviors/goat_behavior_tree/package.xml
+++ b/behaviors/goat_behavior_tree/package.xml
@@ -17,6 +17,8 @@
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>ament_index_cpp</depend>
+  <depend>nav2_msgs</depend>
+  <depend>nav2_common</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>python3-rclpy</exec_depend>
