--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-resizable": "^3.0.8",
     "@types/react-syntax-highlighter": "^15.5.13",
     "d3-force": "^3.0.0",
+    "dagre": "^0.8.5",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "reactflow": "^11.11.4",
     "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.52",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10"
