--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-data/*
+data/shared/*
 llama-3.2-3b-it-Ecommerce-ChatBot/*
 models/llama-3.2-3b-it-Ecommerce-ChatBot/*
 models/wandb/*
@@ -178,3 +178,4 @@ log/*
 build/*
 .vscode/c_cpp_properties.json
 .vscode/settings.json
+training/*
